[package]
name = "changelog"
version = "0.3.3"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/changelog"
documentation = "https://docs.rs/changelog"
description = "Changelog generator"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.2"
exitfailure = "0.5.1"
human-panic = "1.0.0"
structopt = "0.2.10"
log = "0.4.4"
clap_flags = "0.3.0"
git2 = "0.7.5"
comrak = "0.2.14"
chrono = "0.4.5"
serde_derive = "1.0.72"
toml = "0.4.6"
serde = "1.0.72"
mktemp = "0.3.1"

[dev-dependencies]

[build-dependencies]
structopt = "0.2.10"
clap_flags = "0.2.0"
failure = "0.1.2"
git2 = "0.7.5"
chrono = "0.4.5"
serde_derive = "1.0.72"
toml = "0.4.6"
serde = "1.0.72"
mktemp = "0.3.1"
