[package]
name = "changelog"
version = "0.3.4"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yoshuawuyts/changelog"
documentation = "https://docs.rs/changelog"
description = "Changelog generator"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"
edition = "2018"

[dependencies]
failure = "0.1.6"
exitfailure = "0.5.1"
human-panic = "1.0.1"
structopt = "0.3.9"
log = "0.4.8"
clap_flags = "0.5.0"
git2 = "0.11.0"
comrak = "0.7.0"
chrono = "0.4.10"
serde_derive = "1.0.104"
toml = "0.5.6"
serde = "1.0.104"
mktemp = "0.4.0"
semver = "0.9.0"

[dev-dependencies]

[build-dependencies]
structopt = "0.3.9"
clap_flags = "0.5.0"
failure = "0.1.6"
git2 = "0.11.0"
chrono = "0.4.10"
serde_derive = "1.0.104"
toml = "0.5.6"
serde = "1.0.104"
mktemp = "0.4.0"
semver = "0.9.0"
